--- a/public/frontend/assets/css/sidebar.css
+++ b/public/frontend/assets/css/sidebar.css
@@ -1,204 +1,1 @@
-@-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  99% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  99% {
-    transform: rotate(360deg);
-  }
-}
-.sidebar {
-  position: fixed;
-  top: 22px;
-  inset-inline-start: 22px;
-  min-width: 310px;
-  max-width: 20%;
-  padding: 38px 29px;
-  border-radius: 33px;
-  height: 100%;
-  max-height: calc(100vh - 44px);
-  overflow-y: auto;
-  scrollbar-width: none;
-  border: 1px solid var(--white-color);
-  background-image: linear-gradient(
-    var(--sectionThree-color),
-    var(--sectionTwo-color)
-  );
-}
-.sidebar::-webkit-scrollbar {
-  width: 0;
-}
-@media only screen and (max-width: 1440px) {
-  .sidebar {
-    min-width: 280px;
-  }
-}
-@media only screen and (max-width: 1199px) {
-  .sidebar {
-    top: 0;
-    width: 0;
-    inset-inline-start: 0;
-    border-radius: 0;
-    max-height: 100vh;
-    overflow-y: auto;
-    z-index: 100;
-    display: none;
-  }
-}
-@media only screen and (max-width: 575px) {
-  .sidebar {
-    padding: 35px 20px;
-  }
-}
-.sidebar__wrapper {
-  display: flex;
-  gap: 40px;
-  min-height: 100%;
-  flex-direction: column;
-}
-.sidebar__logo {
-  display: flex;
-  align-items: center;
-}
-.sidebar__logo img {
-  max-height: 50px;
-  max-width: 100%;
-}
-.sidebar__close {
-  position: absolute;
-  top: 20px;
-  inset-inline-end: 20px;
-  color: var(--body-color);
-  display: none;
-}
-.sidebar__close:hover {
-  color: var(--danger-color);
-}
-@media only screen and (max-width: 1199px) {
-  .sidebar__close {
-    display: block;
-  }
-}
-.sidebar__menu-wrapper {
-  flex: 1;
-}
-.sidebar__menu {
-  display: flex;
-  flex-direction: column;
-}
-.sidebar__menu__item {
-  position: relative;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-.sidebar__menu__item:first-child {
-  margin-top: 15px;
-}
-.sidebar__menu__item:last-child {
-  margin-bottom: 15px;
-}
-.sidebar__menu__link {
-  width: 100%;
-  display: flex;
-  gap: 15px;
-  color: var(--body-color);
-  padding: 16px 25px;
-  font-size: 16px;
-  line-height: 24px;
-  border-radius: 18px;
-  transition: all 0.3s ease;
-}
-@media only screen and (max-width: 575px) {
-  .sidebar__menu__link {
-    gap: 10px;
-    font-size: 14px;
-    padding: 12px 25px;
-  }
-}
-.sidebar__menu__link i {
-  font-size: 23px;
-  color: var(--grayThree-color);
-}
-@media only screen and (max-width: 575px) {
-  .sidebar__menu__link i {
-    font-size: 20px;
-  }
-}
-.sidebar__menu__link svg path {
-  transition: all 0.3s ease;
-}
-.sidebar__menu__link.default-active,
-.sidebar__menu__link.active,
-.sidebar__menu__link:hover {
-  background: var(--secondary-color) !important;
-}
-.sidebar__menu__link.default-active i,
-.sidebar__menu__link.active i,
-.sidebar__menu__link:hover i {
-  color: var(--primary-color);
-}
-.sidebar__menu__link.default-active svg path,
-.sidebar__menu__link.active svg path,
-.sidebar__menu__link:hover svg path {
-  fill: var(--primary-color);
-}
-.sidebar__submenu {
-  width: 100%;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-  background-image: linear-gradient(
-    var(--sectionThree-color),
-    var(--sectionTwo-color)
-  );
-  z-index: 1;
-  border-radius: 8px;
-}
-.sidebar__submenu .sidebar__menu__link {
-  cursor: pointer;
-  padding: 8px 25px;
-  background: rgba(0, 0, 0, 0);
-}
-.sidebar__submenu .sidebar__menu__link:hover {
-  background: var(--secondary-color) !important;
-}
-.sidebar__footer__title {
-  display: inline-block;
-  font-size: 14px;
-  line-height: 21px;
-  font-weight: 600;
-  color: var(--body-color);
-  margin-bottom: 10px;
-}
-.sidebar__footer__copyright {
-  margin-bottom: 18px;
-}
-.sidebar__footer__author {
-  margin: 0;
-}
-.sidebar__footer__author .heart-icon {
-  color: var(--danger-color);
-}
-.sidebar__footer p {
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 18px;
-  color: var(--sec-color);
-}
-.sidebar__action__btn {
-  padding: 8px 20px;
-  color: #000;
-  background: #c4bebe;
-  border-radius: 5px;
-  border: none;
-  transition: all 0.3s ease;
-}
-.sidebar__action__btn:hover {
-  background: #ccc4c4;
-} /*# sourceMappingURL=sidebar.css.map */
+@-webkit-keyframes spin{0%{-webkit-transform:rotate(0deg)}99%{-webkit-transform:rotate(360deg)}}@keyframes spin{0%{transform:rotate(0deg)}99%{transform:rotate(360deg)}}.sidebar{position:fixed;top:22px;inset-inline-start:22px;min-width:310px;max-width:20%;padding:38px 29px;border-radius:33px;height:100%;max-height:calc(100vh - 44px);overflow-y:auto;scrollbar-width:none;border:1px solid var(--white-color);background-image:linear-gradient(var(--sectionThree-color), var(--sectionTwo-color))}.sidebar::-webkit-scrollbar{width:0}@media only screen and (max-width: 1440px){.sidebar{min-width:280px}}@media only screen and (max-width: 1199px){.sidebar{top:0;width:0;inset-inline-start:0;border-radius:0;max-height:100vh;overflow-y:auto;z-index:100;display:none}}@media only screen and (max-width: 575px){.sidebar{padding:35px 20px}}.sidebar__wrapper{display:flex;gap:40px;min-height:100%;flex-direction:column}.sidebar__logo{display:flex;align-items:center}.sidebar__logo img{max-height:50px;max-width:100%}.sidebar__close{position:absolute;top:20px;inset-inline-end:20px;color:var(--body-color);display:none}.sidebar__close:hover{color:var(--danger-color)}@media only screen and (max-width: 1199px){.sidebar__close{display:block}}.sidebar__menu-wrapper{flex:1}.sidebar__menu{display:flex;flex-direction:column}.sidebar__menu__item{position:relative;display:flex;align-items:center;flex-direction:column}.sidebar__menu__item:first-child{margin-top:15px}.sidebar__menu__item:last-child{margin-bottom:15px}.sidebar__menu__link{width:100%;display:flex;gap:15px;color:var(--body-color);padding:16px 25px;font-size:16px;line-height:24px;border-radius:18px;transition:all .3s ease}@media only screen and (max-width: 575px){.sidebar__menu__link{gap:10px;font-size:14px;padding:12px 25px}}.sidebar__menu__link i{font-size:23px;color:var(--grayThree-color)}@media only screen and (max-width: 575px){.sidebar__menu__link i{font-size:20px}}.sidebar__menu__link svg path{transition:all .3s ease}.sidebar__menu__link.default-active,.sidebar__menu__link.active,.sidebar__menu__link:hover{color:var(--primary-color) !important;background:rgba(171,84,219,.15)}.sidebar__menu__link.default-active i,.sidebar__menu__link.active i,.sidebar__menu__link:hover i{color:var(--primary-color)}.sidebar__menu__link.default-active svg path,.sidebar__menu__link.active svg path,.sidebar__menu__link:hover svg path{fill:var(--primary-color)}.sidebar__submenu{width:100%;box-shadow:0 3px 10px rgba(0,0,0,.1);background-image:linear-gradient(var(--sectionThree-color), var(--sectionTwo-color));z-index:1;border-radius:8px}.sidebar__submenu .sidebar__menu__link{cursor:pointer;padding:8px 25px;background:rgba(0,0,0,0)}.sidebar__submenu .sidebar__menu__link:hover{background:var(--secondary-color) !important}.sidebar__footer__title{display:inline-block;font-size:14px;line-height:21px;font-weight:600;color:var(--body-color);margin-bottom:10px}.sidebar__footer__copyright{margin-bottom:18px}.sidebar__footer__author{margin:0}.sidebar__footer__author .heart-icon{color:var(--danger-color)}.sidebar__footer p{font-size:12px;font-weight:400;line-height:18px;color:var(--sec-color)}.sidebar__action__btn{padding:8px 20px;color:#000;background:#c4bebe;border-radius:5px;border:none;transition:all .3s ease}.sidebar__action__btn:hover{background:#ccc4c4}/*# sourceMappingURL=sidebar.css.map */
