--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,14 +2,14 @@
   <div class="loginBox">
     <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
       <div class="logoDbContainer">
-        <img src="../../assets/images/logoDb.png" class="logoDb" />
+        <img src="../../assets/img/logoDb.png" class="logoDb" />
       </div>
       <div class="logoText">
         <b>Products Admin panel</b>
         <br />
         developed in Angular - Spring Boot
         <br />
-        <img src="../../assets/images/angular-spring.png" class="logoAngular" />
+        <img src="../../assets/img/angular-spring.png" class="logoAngular" />
       </div>
       <div>
         <label for="username">Username:</label>
