--- a/src/assets/sass/variables.scss
+++ b/src/assets/sass/variables.scss
@@ -4,7 +4,7 @@
 
 :root {
   --primary-color: #3b9ae4;
-  --secondary-color: #b7dbf9;
+  --secondary-color: #52a8eb;
   --dark-color: #17161e;
   --body-color: #464255;
   --desc-color: #3b3741;
