--- a/src/app/todos/subcategories/subcategory-edit/subcategory-edit.component.html
+++ b/src/app/todos/subcategories/subcategory-edit/subcategory-edit.component.html
@@ -1,5 +1,5 @@
 <h5>
-  Products > Subcategories > Edit >
+  Todos > Subcategories > Edit >
   <span>{{ subcategory?.name || "" }}</span>
 </h5>
 <hr />
