--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,13 +1,13 @@
-<h5>Products</h5>
+<h5>Todos</h5>
 <hr />
 
 <mat-card class="pageCard">
   <mat-card-content>
     <div class="buttonContainer">
       <div class="buttonContainer2">
-        <button (click)="onNewProduct()" class="buttonBase">
+        <button (click)="onNewTodo()" class="buttonBase">
           <mat-icon>add_circle</mat-icon>
-          New product
+          New todo
         </button>
         <div class="viewContainer">
           <div>View</div>
