--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,3 +149,6 @@ a {
 .sidebar__menu__link:hover .mat-icon {
   color: #fff !important;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
