--- a/src/app/todos/card/card.component.html
+++ b/src/app/todos/card/card.component.html
@@ -1,23 +1,22 @@
 <div class="cardImgContainer">
   <img
     [src]="
-      getFullImageUrl(product.imageUrl)
+      getFullImageUrl(todo.imageUrl)
         | protectedImage
         | async
         | defaultImage : 'assets/images/nophoto.jpg'
     "
-    alt="{{ product.name }}"
+    alt="{{ todo.name }}"
     class="cardImg"
-    (click)="openImageDialog(product.imageUrl, 'products/image')"
+    (click)="openImageDialog(todo.imageUrl, 'todos/image')"
   />
 </div>
 <div class="cardBody">
-  <h5 class="cardTitle">{{ product.name }}</h5>
-  <p class="cardText"><b>Sku:</b> {{ product.sku }}</p>
+  <h5 class="cardTitle">{{ todo.name }}</h5>
+  <p class="cardText"><b>Sku:</b> 00000</p>
 
-  <div>{{ product.categoryDto.name }}</div>
+  <!--div>{{ todo.categoryDto.name }}</div-->
 
-  <div>{{ product.price | currencyFormat }}</div>
 </div>
 
 <div class="buttonContainer">
@@ -27,14 +26,14 @@
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
     matTooltip="Detail"
-    (click)="openDialog(product.id)"
+    (click)="openDialog(todo.id)"
   >
     <mat-icon class="viewButton">article</mat-icon>
   </button>
 
   <button
     class="cardButton"
-    (click)="onEditProduct(product.id)"
+    (click)="onEditTodo(todo.id)"
     matTooltipPosition="above"
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
@@ -45,7 +44,7 @@
 
   <button
     class="cardButton"
-    (click)="onAttributeProduct(product.id)"
+    (click)="onAttributeTodo(todo.id)"
     matTooltipPosition="above"
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
@@ -56,7 +55,7 @@
 
   <button
     class="cardButton"
-    (click)="onPhotoProduct(product.id)"
+    (click)="onPhotoTodo(todo.id)"
     matTooltipPosition="above"
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
@@ -67,7 +66,7 @@
 
   <button
     class="cardButton"
-    (click)="onGalleryProduct(product.id)"
+    (click)="onGalleryTodo(todo.id)"
     matTooltipPosition="above"
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
@@ -78,7 +77,7 @@
 
   <button
     class="cardButton cardButtonDelete"
-    (click)="onDelete(product.id, product.name)"
+    (click)="onDelete(todo.id, todo.name)"
     matTooltipPosition="above"
     matTooltipShowDelay="100"
     matTooltipHideDelay="100"
