--- a/src/app/todos/categories/category-new/category-new.component.html
+++ b/src/app/todos/categories/category-new/category-new.component.html
@@ -9,6 +9,7 @@
     </button>
 
     <form
+      *ngIf="categoryForm"
       [formGroup]="categoryForm"
       (ngSubmit)="onSubmit()"
       class="formContainer"
@@ -33,7 +34,6 @@
           rows="6"
         ></textarea>
       </div>
-
 
       <div class="submitContainer">
         <button
