--- a/src/app/todos/gallery/gallery.component.html
+++ b/src/app/todos/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<h5>Todos > Gallery > {{ todo.name && todo.name }}</h5>
+<h5>Todos > Gallery > {{ todo?.name }}</h5>
 <hr />
 
 <mat-card class="pageCard">
@@ -10,11 +10,7 @@
     <div class="row" *ngIf="todo$ | async as todo; else loading">
       <div class="row">
         <div class="col-xs-12">
-          <form
-            *ngIf="todoForm"
-            [formGroup]="todoForm"
-            (ngSubmit)="onSubmit()"
-          >
+          <form *ngIf="todoForm" [formGroup]="todoForm" (ngSubmit)="onSubmit()">
             <div class="row">
               <div class="col-xs-12">
                 <div class="form-group fileInputContainer">
@@ -65,10 +61,8 @@
           >
             <img
               [src]="
-                getFullImageUrl(image.url)
-                  | protectedImage
-                  | async
-                  | defaultImage : 'assets/images/nophoto.jpg'
+                (getFullImageUrl(image.url) | protectedImage | async) ||
+                'assets/images/nophoto.jpg'
               "
               (click)="openImageDialog(image.url, 'todos/gallery')"
               class="galleryImg"
