--- a/src/app/todos/subcategories/subcategory-edit/subcategory-edit.component.html
+++ b/src/app/todos/subcategories/subcategory-edit/subcategory-edit.component.html
@@ -33,7 +33,7 @@
             id="idCategory"
             formControlName="idCategory"
             class="inputField subCatSelect"
-            (change)="onCategoryChange($event.target.value)"
+            (change)="onCategoryChange($event)"
             *ngIf="categories$"
           >
             <option
