--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -24,6 +24,7 @@
   display: flex;
   justify-content: space-between;
   height: 46px;
+  border: 3px solid red;
 }
 
 .buttonContainer2 {
@@ -31,30 +32,36 @@
   gap: 14px;
 }
 
+.mainTodoContainer {
+  border: 3px solid green;
+  width: calc(100%-350px)
+}
+
 .viewContainer {
   display: flex;
   gap: 4px;
   align-items: center;
-  border:1px solid #ddd;
-  border-radius:4px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
   padding: 8px;
-  padding-right:4px;
+  padding-right: 4px;
   background-color: #f1f1f1;
   box-shadow: 0px 2px 3px 0px rgb(0, 0, 0, 0.2);
+  border: 3px solid;
 }
 
 .viewContainer div {
   font-size: 14px;
-  padding:10px 20px;
+  padding: 10px 20px;
 }
 
-.buttonView{
-  height:38px !important;
+.buttonView {
+  height: 38px !important;
   align-items: center;
   display: flex;
   justify-content: center;
 }
 
-.notSelected{
+.notSelected {
   background-color: #999;
 }
