--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -34,7 +34,7 @@
 
 .mainTodoContainer {
   border: 3px solid green;
-  width: calc(100%-350px)
+  width: calc(100% - 350px);
 }
 
 .viewContainer {
