--- a/src/app/todos/row/row.component.css
+++ b/src/app/todos/row/row.component.css
@@ -1,30 +1,5 @@
-.listRow > div {
-  text-align: center;
-}
-
-.listRow > div:nth-child(1) {
-  width: 10%;
-  max-width: 150px;
-}
-
-.listRow > div:nth-child(2) {
-  width: 30%;
-  text-align: left;
-}
-
-.listRow > div:nth-child(3) {
-  width: 20%;
-}
-
-.listRow > div:nth-child(4) {
-  width: 20%;
-}
-
-.listRow > div:nth-child(5) {
-  width: 20%;
-  justify-content: end;
-  text-align: right;
-  margin-left: auto
+.listRow {
+  margin-bottom: 12px;
 }
 
 .categoryContainer {
